2017-01-25  Markus Gans  <guru.mail@muenster.de>
	* UTF-8 fix for Solaris

2017-01-24  Markus Gans  <guru.mail@muenster.de>
	* Fixes compiler errors for latest Cygwin versions
	* Widget color scheme settings moved to a separate class
	* The color palette redefinition now has its own class

2017-01-21  Markus Gans  <guru.mail@muenster.de>
	* The Final Cut can now also be compiled under Cygwin
	* Fixed bug in FScrollView::scrollTo
	* Refactoring FStatusBar::drawKeys
	* Refactoring FListView::drawListLine

2017-01-17  Markus Gans  <guru.mail@muenster.de>
	* Small array optimizations in the examples

2017-01-14  Markus Gans  <guru.mail@muenster.de>
	* Mouse functions are now in a separate class

2017-01-05  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FVTerm::restoreVTerm
	* Fixed buffer size in FOptiMove

2017-01-03  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FOptiMove::relativeMove
	* Refactoring attribute settings in FOptiAttr
	* Refactoring FTerm::parseKeyString and timeout settings

2017-01-02  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of secondary device attributes parsing
        * Small menu improvements

2017-12-31  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of the FListBox mouse event handler
	* Refactoring of the FMenuBar mouse event handler
	* Replace the switch-case in the calculator example by an STL map 
	  with method pointers

2017-12-29  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of the FDialog mouse event handler

2017-12-27  Markus Gans  <guru.mail@muenster.de>
	* Generalize scroll functions in FScrollView
	* Refactoring FScrollbar::drawBar
	* Refactoring FLineEdit::onKeyPress
	* Refactoring FMenu::onKeyPress
	* Refactoring FDialog::onKeyPress
	* Refactoring FDialog::drawTitleBar
	* New FDialog methods moveUp(), moveDown(), moveLeft(), 
	  moveRight(), reduceHeight(), expandHeight(), reduceWidth(), 
	  and expandWidth()

2017-12-25  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FButton::draw