@@ -252,6 +252,7 @@ inline bool FMouseGPM::isGpmMouseEnabled()
 { return gpm_mouse_enabled; }
 #endif
 
+
 //----------------------------------------------------------------------
 // class FMouseX11
 //----------------------------------------------------------------------
